--- a/categories/dialogue/_posts/2021-01-12-dialogue.md
+++ b/categories/dialogue/_posts/2021-01-12-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2021-01-23*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Transforming Multi-Conditioned Generation from Meaning Representation](http://arxiv.org/abs/2101.04257v1) | Joosung Lee | cs.CL, cs.AI | 2021-01-12 |
 | [Continual Learning in Task-Oriented Dialogue Systems](http://arxiv.org/abs/2012.15504v1) | Andrea Madotto, Zhaojiang Lin, Zhenpeng Zhou, Seungwhan Moon, Paul Crook, Bing Liu, Zhou Yu, Eunjoon Cho, Zhiguang Wang | cs.CL, cs.AI | 2020-12-31 |
 | [Interpretable NLG for Task-oriented Dialogue Systems with Heterogeneous  Rendering Machines](http://arxiv.org/abs/2012.14645v1) | Yangming Li, Kaisheng Yao | cs.CL | 2020-12-29 |
 
