--- a/categories/table2text/_posts/2021-01-20-table2text.md
+++ b/categories/table2text/_posts/2021-01-20-table2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2021-01-23*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Generating (Formulaic) Text by Splicing Together Nearest Neighbors](http://arxiv.org/abs/2101.08248v1) | Sam Wiseman, Arturs Backurs, Karl Stratos | cs.CL, cs.LG | 2021-01-20 |
 | [What Makes Good In-Context Examples for GPT-$3$?](http://arxiv.org/abs/2101.06804v1) | Jiachang Liu, Dinghan Shen, Yizhe Zhang, Bill Dolan, Lawrence Carin, Weizhu Chen | cs.CL | 2021-01-17 |
 | [Narration Generation for Cartoon Videos](http://arxiv.org/abs/2101.06803v1) | Nikos Papasarantopoulos, Shay B. Cohen | cs.CL | 2021-01-17 |
 | [Transforming Multi-Conditioned Generation from Meaning Representation](http://arxiv.org/abs/2101.04257v1) | Joosung Lee | cs.CL, cs.AI | 2021-01-12 |
