updated data files

--- a/categories/image2text/_posts/2021-02-04-image2text.md
+++ b/categories/image2text/_posts/2021-02-04-image2text.md
@@ -6,10 +6,17 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2021-02-05*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Controlling Hallucinations at Word Level in Data-to-Text Generation](http://arxiv.org/abs/2102.02810v1) | Clément Rebuffel, Marco Roberti, Laure Soulier, Geoffrey Scoutheeten, Rossella Cancelliere, Patrick Gallinari | cs.CL, cs.AI, cs.LG, cs.NE, 68T50 (Primary), 68T07 (Secondary), 68T05, I.2.6; I.2.7 | 2021-02-04 |
+| [Unifying Vision-and-Language Tasks via Text Generation](http://arxiv.org/abs/2102.02779v1) | Jaemin Cho, Jie Lei, Hao Tan, Mohit Bansal | cs.CL, cs.AI, cs.CV, cs.LG | 2021-02-04 |
+| [The GEM Benchmark: Natural Language Generation, its Evaluation and  Metrics](http://arxiv.org/abs/2102.01672v2) | Sebastian Gehrmann, Tosin Adewumi, Karmanya Aggarwal, Pawan Sasanka Ammanamanchi, Aremu Anuoluwapo, Antoine Bosselut, Khyathi Raghavi Chandu, Miruna Clinciu, Dipanjan Das, Kaustubh D. Dhole, Wanyu Du, Esin Durmus, Ondřej Dušek, Chris Emezue, Varun Gangal, Cristina Garbacea, Tatsunori Hashimoto, Yufang Hou, Yacine Jernite, Harsh Jhamtani, Yangfeng Ji, Shailza Jolly, Dhruv Kumar, Faisal Ladhak, Aman Madaan, Mounica Maddela, Khyati Mahajan, Saad Mahamood, Bodhisattwa Prasad Majumder, Pedro Henrique Martins, Angelina McMillan-Major, Simon Mille, Emiel van Miltenburg, Moin Nadeem, Shashi Narayan, Vitaly Nikolaev, Rubungo Andre Niyongabo, Salomey Osei, Ankur Parikh, Laura Perez-Beltrachini, Niranjan Ramesh Rao, Vikas Raunak, Juan Diego Rodriguez, Sashank Santhanam, João Sedoc, Thibault Sellam, Samira Shaikh, Anastasia Shimorina, Marco Antonio Sobrevilla Cabezudo, Hendrik Strobelt, Nishant Subramani, Wei Xu, Diyi Yang, Akhila Yerukola, Jiawei Zhou | cs.CL, cs.AI, cs.LG | 2021-02-02 |
+| [Generating images from caption and vice versa via CLIP-Guided Generative  Latent Space Search](http://arxiv.org/abs/2102.01645v2) | Federico A. Galatolo, Mario G. C. A. Cimino, Gigliola Vaglini | cs.NE, cs.AI, cs.LG | 2021-02-02 |
+| [VX2TEXT: End-to-End Learning of Video-Based Text Generation From  Multimodal Inputs](http://arxiv.org/abs/2101.12059v2) | Xudong Lin, Gedas Bertasius, Jue Wang, Shih-Fu Chang, Devi Parikh, Lorenzo Torresani | cs.CV, cs.CL | 2021-01-28 |
+| [GUIGAN: Learning to Generate GUI Designs Using Generative Adversarial  Networks](http://arxiv.org/abs/2101.09978v2) | Tianming Zhao, Chunyang Chen, Yuanning Liu, Xiaodong Zhu | cs.HC, cs.CV, cs.LG, cs.SE | 2021-01-25 |
+| [Towards Understanding How Readers Integrate Charts and Captions: A Case  Study with Line Charts](http://arxiv.org/abs/2101.08235v1) | Dae Hyun Kim, Vidya Setlur, Maneesh Agrawala | cs.HC | 2021-01-20 |
 | [Narration Generation for Cartoon Videos](http://arxiv.org/abs/2101.06803v1) | Nikos Papasarantopoulos, Shay B. Cohen | cs.CL | 2021-01-17 |
 | [Zero-shot Learning by Generating Task-specific Adapters](http://arxiv.org/abs/2101.00420v1) | Qinyuan Ye, Xiang Ren | cs.CL, cs.LG | 2021-01-02 |
 | [Neural Text Generation with Artificial Negative Examples](http://arxiv.org/abs/2012.14124v1) | Keisuke Shirai, Kazuma Hashimoto, Akiko Eriguchi, Takashi Ninomiya, Shinsuke Mori | cs.CL, cs.AI | 2020-12-28 |
