--- a/categories/table2text/_posts/2021-02-04-table2text.md
+++ b/categories/table2text/_posts/2021-02-04-table2text.md
@@ -6,10 +6,13 @@ sidebar:
 ---
 
 
-*written on 2021-01-23*
+*written on 2021-02-05*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Controlling Hallucinations at Word Level in Data-to-Text Generation](http://arxiv.org/abs/2102.02810v1) | Clément Rebuffel, Marco Roberti, Laure Soulier, Geoffrey Scoutheeten, Rossella Cancelliere, Patrick Gallinari | cs.CL, cs.AI, cs.LG, cs.NE, 68T50 (Primary), 68T07 (Secondary), 68T05, I.2.6; I.2.7 | 2021-02-04 |
+| [Data-to-text Generation with Macro Planning](http://arxiv.org/abs/2102.02723v1) | Ratish Puduppully, Mirella Lapata | cs.CL | 2021-02-04 |
+| [GUIGAN: Learning to Generate GUI Designs Using Generative Adversarial  Networks](http://arxiv.org/abs/2101.09978v2) | Tianming Zhao, Chunyang Chen, Yuanning Liu, Xiaodong Zhu | cs.HC, cs.CV, cs.LG, cs.SE | 2021-01-25 |
 | [Generating (Formulaic) Text by Splicing Together Nearest Neighbors](http://arxiv.org/abs/2101.08248v1) | Sam Wiseman, Arturs Backurs, Karl Stratos | cs.CL, cs.LG | 2021-01-20 |
 | [What Makes Good In-Context Examples for GPT-$3$?](http://arxiv.org/abs/2101.06804v1) | Jiachang Liu, Dinghan Shen, Yizhe Zhang, Bill Dolan, Lawrence Carin, Weizhu Chen | cs.CL | 2021-01-17 |
 | [Narration Generation for Cartoon Videos](http://arxiv.org/abs/2101.06803v1) | Nikos Papasarantopoulos, Shay B. Cohen | cs.CL | 2021-01-17 |
