--- a/categories/games/_posts/2021-01-23-games.md
+++ b/categories/games/_posts/2021-01-23-games.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-01-22*
+*written on 2021-02-05*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Deep Learning for General Game Playing with Ludii and Polygames](http://arxiv.org/abs/2101.09562v1) | Dennis J. N. J. Soemers, Vegard Mella, Cameron Browne, Olivier Teytaud | cs.AI | 2021-01-23 |
+| [Ludii Game Logic Guide](http://arxiv.org/abs/2101.02120v1) | Eric Piette, Cameron Browne, Dennis J. N. J. Soemers | cs.AI | 2021-01-06 |
 | [DORB: Dynamically Optimizing Multiple Rewards with Bandits](http://arxiv.org/abs/2011.07635v1) | Ramakanth Pasunuru, Han Guo, Mohit Bansal | cs.CL, cs.AI, cs.LG | 2020-11-15 |
 | [Learning Better Representation for Tables by Self-Supervised Tasks](http://arxiv.org/abs/2010.07606v1) | Liang Li, Can Ma, Yinliang Yue, Linjun Shou, Dayong Hu | cs.CL | 2020-10-15 |
 | [Discovering Textual Structures: Generative Grammar Induction using  Template Trees](http://arxiv.org/abs/2009.04530v1) | Thomas Winters, Luc De Raedt | cs.CL, cs.AI, 68T50, I.2.7; I.2.6 | 2020-09-09 |
