updated md files and data

--- a/categories/dialogue/_posts/2021-02-10-dialogue.md
+++ b/categories/dialogue/_posts/2021-02-10-dialogue.md
@@ -6,10 +6,19 @@ sidebar:
 ---
 
 
-*written on 2021-02-05*
+*written on 2021-02-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Improving Model-Based Reinforcement Learning with Internal State  Representations through Self-Supervision](http://arxiv.org/abs/2102.05599v1) | Julien Scholz, Cornelius Weber, Muhammad Burhan Hafez, Stefan Wermter | cs.LG | 2021-02-10 |
+| [Multi-turn Dialogue Reading Comprehension with Pivot Turns and Knowledge](http://arxiv.org/abs/2102.05474v1) | Zhuosheng Zhang, Junlong Li, Hai Zhao | cs.CL, cs.AI | 2021-02-10 |
+| [Automated and Distributed Statistical Analysis of Economic Agent-Based  Models](http://arxiv.org/abs/2102.05405v1) | Andrea Vandin, Daniele Giachini, Francesco Lamperti, Francesca Chiaromonte | econ.GN, cs.MA, cs.PF, q-fin.EC | 2021-02-10 |
+| [Policy Augmentation: An Exploration Strategy for Faster Convergence of  Deep Reinforcement Learning Algorithms](http://arxiv.org/abs/2102.05249v1) | Arash Mahyari | cs.LG, cs.AI, cs.CV, cs.RO, cs.SY, eess.SY | 2021-02-10 |
+| [Decontextualization: Making Sentences Stand-Alone](http://arxiv.org/abs/2102.05169v1) | Eunsol Choi, Jennimaria Palomaki, Matthew Lamm, Tom Kwiatkowski, Dipanjan Das, Michael Collins | cs.CL, cs.AI | 2021-02-09 |
+| [Scheduling the NASA Deep Space Network with Deep Reinforcement Learning](http://arxiv.org/abs/2102.05167v1) | Edwin Goh, Hamsa Shwetha Venkataram, Mark Hoffmann, Mark Johnston, Brian Wilson | cs.LG | 2021-02-09 |
+| [AuGPT: Dialogue with Pre-trained Language Models and Data Augmentation](http://arxiv.org/abs/2102.05126v1) | Jonáš Kulhánek, Vojtěch Hudeček, Tomáš Nekvinda, Ondřej Dušek | cs.CL, cs.AI, cs.LG | 2021-02-09 |
+| [RL for Latent MDPs: Regret Guarantees and a Lower Bound](http://arxiv.org/abs/2102.04939v1) | Jeongyeol Kwon, Yonathan Efroni, Constantine Caramanis, Shie Mannor | cs.LG | 2021-02-09 |
+| [Learning State Representations from Random Deep Action-conditional  Predictions](http://arxiv.org/abs/2102.04897v1) | Zeyu Zheng, Vivek Veeriah, Risto Vuorio, Richard Lewis, Satinder Singh | cs.LG, cs.AI | 2021-02-09 |
 | [Persistent Rule-based Interactive Reinforcement Learning](http://arxiv.org/abs/2102.02441v1) | Adam Bignold, Francisco Cruz, Richard Dazeley, Peter Vamplew, Cameron Foale | cs.AI, cs.MA | 2021-02-04 |
 | [Converse, Focus and Guess -- Towards Multi-Document Driven Dialogue](http://arxiv.org/abs/2102.02435v1) | Han Liu, Caixia Yuan, Xiaojie Wang, Yushu Yang, Huixing Jiang, Zhongyuan Wang | cs.CL | 2021-02-04 |
 | [Neural Recursive Belief States in Multi-Agent Reinforcement Learning](http://arxiv.org/abs/2102.02274v1) | Pol Moreno, Edward Hughes, Kevin R. McKee, Bernardo Avila Pires, Théophane Weber | cs.LG, cs.AI, cs.MA | 2021-02-03 |
