--- a/categories/dialogue/_posts/2021-02-16-dialogue.md
+++ b/categories/dialogue/_posts/2021-02-16-dialogue.md
@@ -6,10 +6,21 @@ sidebar:
 ---
 
 
-*written on 2021-02-11*
+*written on 2021-02-17*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Quantifying environment and population diversity in multi-agent  reinforcement learning](http://arxiv.org/abs/2102.08370v1) | Kevin R. McKee, Joel Z. Leibo, Charlie Beattie, Richard Everett | cs.MA, cs.AI | 2021-02-16 |
+| [A Cooperative Memory Network for Personalized Task-oriented Dialogue  Systems with Incomplete User Profiles](http://arxiv.org/abs/2102.08322v1) | Jiahuan Pei, Pengjie Ren, Maarten de Rijke | cs.AI, cs.CL, cs.IR | 2021-02-16 |
+| [An Effort to Measure Customer Relationship Performance in Indonesia's  Fintech Industry](http://arxiv.org/abs/2102.08262v1) | Alisya Putri Rabbani, Andry Alamsyah, Sri Widiyanesti | econ.GN, cs.CY, cs.LG, cs.SI, q-fin.EC, 00-XX, K.4.m | 2021-02-16 |
+| [Composing Pick-and-Place Tasks By Grounding Language](http://arxiv.org/abs/2102.08094v1) | Oier Mees, Wolfram Burgard | cs.RO, cs.AI, cs.CV, cs.LG | 2021-02-16 |
+| [Steadily Learn to Drive with Virtual Memory](http://arxiv.org/abs/2102.08072v1) | Yuhang Zhang, Yao Mu, Yujie Yang, Yang Guan, Shengbo Eben Li, Qi Sun, Jianyu Chen | cs.LG, cs.AI, cs.RO, cs.SY, eess.SY | 2021-02-16 |
+| [DFAC Framework: Factorizing the Value Function via Quantile Mixture for  Multi-Agent Distributional Q-Learning](http://arxiv.org/abs/2102.07936v1) | Wei-Fang Sun, Cheng-Kuang Lee, Chun-Yi Lee | cs.MA, cs.LG | 2021-02-16 |
+| ["From What I see, this makes sense": Seeing meaning in algorithmic  results](http://arxiv.org/abs/2102.07844v1) | Samir Passi | cs.HC, cs.CL | 2021-02-15 |
+| [Interim envy-freeness: A new fairness concept for random allocations](http://arxiv.org/abs/2102.07839v1) | Ioannis Caragiannis, Panagiotis Kanellopoulos, Maria Kyropoulou | cs.GT | 2021-02-15 |
+| [End-to-End Egospheric Spatial Memory](http://arxiv.org/abs/2102.07764v1) | Daniel Lenton, Stephen James, Ronald Clark, Andrew J. Davison | cs.RO, cs.AI, cs.CV, cs.LG, cs.NE | 2021-02-15 |
+| [Data-driven Analysis for Understanding Team Sports Behaviors](http://arxiv.org/abs/2102.07545v1) | Keisuke Fujii | cs.AI | 2021-02-15 |
+| [Cooperation and Reputation Dynamics with Reinforcement Learning](http://arxiv.org/abs/2102.07523v1) | Nicolas Anastassacos, Julian García, Stephen Hailes, Mirco Musolesi | cs.MA, cs.AI | 2021-02-15 |
 | [Improving Model-Based Reinforcement Learning with Internal State  Representations through Self-Supervision](http://arxiv.org/abs/2102.05599v1) | Julien Scholz, Cornelius Weber, Muhammad Burhan Hafez, Stefan Wermter | cs.LG | 2021-02-10 |
 | [Multi-turn Dialogue Reading Comprehension with Pivot Turns and Knowledge](http://arxiv.org/abs/2102.05474v1) | Zhuosheng Zhang, Junlong Li, Hai Zhao | cs.CL, cs.AI | 2021-02-10 |
 | [Automated and Distributed Statistical Analysis of Economic Agent-Based  Models](http://arxiv.org/abs/2102.05405v1) | Andrea Vandin, Daniele Giachini, Francesco Lamperti, Francesca Chiaromonte | econ.GN, cs.MA, cs.PF, q-fin.EC | 2021-02-10 |
