--- a/categories/image2text/_posts/2021-02-12-image2text.md
+++ b/categories/image2text/_posts/2021-02-12-image2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-02-11*
+*written on 2021-02-17*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Annotation Cleaning for the MSR-Video to Text Dataset](http://arxiv.org/abs/2102.06448v1) | Haoran Chen, Jianmin Li, Simone Frintrop, Xiaolin Hu | cs.CV, cs.LG, 68T45, 68T50, I.2.10; I.2.7 | 2021-02-12 |
 | [SG2Caps: Revisiting Scene Graphs for Image Captioning](http://arxiv.org/abs/2102.04990v1) | Subarna Tripathi, Kien Nguyen, Tanaya Guha, Bang Du, Truong Q. Nguyen | cs.CV, cs.CL | 2021-02-09 |
 | [Controlling Hallucinations at Word Level in Data-to-Text Generation](http://arxiv.org/abs/2102.02810v1) | Clément Rebuffel, Marco Roberti, Laure Soulier, Geoffrey Scoutheeten, Rossella Cancelliere, Patrick Gallinari | cs.CL, cs.AI, cs.LG, cs.NE, 68T50 (Primary), 68T07 (Secondary), 68T05, I.2.6; I.2.7 | 2021-02-04 |
 | [Unifying Vision-and-Language Tasks via Text Generation](http://arxiv.org/abs/2102.02779v1) | Jaemin Cho, Jie Lei, Hao Tan, Mohit Bansal | cs.CL, cs.AI, cs.CV, cs.LG | 2021-02-04 |
