--- a/categories/table2text/_posts/2021-02-12-table2text.md
+++ b/categories/table2text/_posts/2021-02-12-table2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-02-11*
+*written on 2021-02-17*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Structural Information Preserving for Graph-to-Text Generation](http://arxiv.org/abs/2102.06749v1) | Linfeng Song, Ante Wang, Jinsong Su, Yue Zhang, Kun Xu, Yubin Ge, Dong Yu | cs.CL | 2021-02-12 |
 | [Generating Synthetic Text Data to Evaluate Causal Inference Methods](http://arxiv.org/abs/2102.05638v1) | Zach Wood-Doughty, Ilya Shpitser, Mark Dredze | cs.CL | 2021-02-10 |
 | [Neural Data-to-Text Generation with LM-based Text Augmentation](http://arxiv.org/abs/2102.03556v1) | Ernie Chang, Xiaoyu Shen, Dawei Zhu, Vera Demberg, Hui Su | cs.CL | 2021-02-06 |
 | [Does the Order of Training Samples Matter? Improving Neural Data-to-Text  Generation with Curriculum Learning](http://arxiv.org/abs/2102.03554v1) | Ernie Chang, Hui-Syuan Yeh, Vera Demberg | cs.CL | 2021-02-06 |
