--- a/categories/games/_posts/2021-02-24-games.md
+++ b/categories/games/_posts/2021-02-24-games.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-02-05*
+*written on 2021-02-25*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Transfer of Fully Convolutional Policy-Value Networks Between Games and  Game Variants](http://arxiv.org/abs/2102.12375v1) | Dennis J. N. J. Soemers, Vegard Mella, Eric Piette, Matthew Stephenson, Cameron Browne, Olivier Teytaud | cs.LG | 2021-02-24 |
+| [Mutual information-based group explainers with coalition structure for  machine learning model explanations](http://arxiv.org/abs/2102.10878v2) | Alexey Miroshnikov, Konstandinos Kotsiopoulos, Arjun Ravi Kannan | cs.GT, math.PR | 2021-02-22 |
 | [Deep Learning for General Game Playing with Ludii and Polygames](http://arxiv.org/abs/2101.09562v1) | Dennis J. N. J. Soemers, Vegard Mella, Cameron Browne, Olivier Teytaud | cs.AI | 2021-01-23 |
 | [Ludii Game Logic Guide](http://arxiv.org/abs/2101.02120v1) | Eric Piette, Cameron Browne, Dennis J. N. J. Soemers | cs.AI | 2021-01-06 |
 | [DORB: Dynamically Optimizing Multiple Rewards with Bandits](http://arxiv.org/abs/2011.07635v1) | Ramakanth Pasunuru, Han Guo, Mohit Bansal | cs.CL, cs.AI, cs.LG | 2020-11-15 |
