--- a/categories/story/_posts/2021-02-12-story.md
+++ b/categories/story/_posts/2021-02-12-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-02-11*
+*written on 2021-02-25*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [On Efficient Training, Controllability and Compositional Generalization  of Insertion-based Language Generators](http://arxiv.org/abs/2102.11008v1) | Sidi Lu, Nanyun Peng | cs.CL | 2021-02-12 |
 | [GraphPlan: Story Generation by Planning with Event Graph](http://arxiv.org/abs/2102.02977v1) | Hong Chen, Raphael Shu, Hiroya Takamura, Hideki Nakayama | cs.CL | 2021-02-05 |
 | [MAUVE: Human-Machine Divergence Curves for Evaluating Open-Ended Text  Generation](http://arxiv.org/abs/2102.01454v1) | Krishna Pillutla, Swabha Swayamdipta, Rowan Zellers, John Thickstun, Yejin Choi, Zaid Harchaoui | cs.CL | 2021-02-02 |
 | [Persistent Anti-Muslim Bias in Large Language Models](http://arxiv.org/abs/2101.05783v2) | Abubakar Abid, Maheen Farooqi, James Zou | cs.CL, cs.LG | 2021-01-14 |
