updated and fixed games links

--- a/categories/story/_posts/2021-02-25-story.md
+++ b/categories/story/_posts/2021-02-25-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-02-25*
+*written on 2021-03-04*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Automatic Story Generation: Challenges and Attempts](http://arxiv.org/abs/2102.12634v1) | Amal Alabdulkarim, Siyan Li, Xiangyu Peng | cs.CL | 2021-02-25 |
 | [On Efficient Training, Controllability and Compositional Generalization  of Insertion-based Language Generators](http://arxiv.org/abs/2102.11008v1) | Sidi Lu, Nanyun Peng | cs.CL | 2021-02-12 |
 | [GraphPlan: Story Generation by Planning with Event Graph](http://arxiv.org/abs/2102.02977v1) | Hong Chen, Raphael Shu, Hiroya Takamura, Hideki Nakayama | cs.CL | 2021-02-05 |
 | [MAUVE: Human-Machine Divergence Curves for Evaluating Open-Ended Text  Generation](http://arxiv.org/abs/2102.01454v1) | Krishna Pillutla, Swabha Swayamdipta, Rowan Zellers, John Thickstun, Yejin Choi, Zaid Harchaoui | cs.CL | 2021-02-02 |
