rerun and update

--- a/categories/dialogue/_posts/2021-03-07-dialogue.md
+++ b/categories/dialogue/_posts/2021-03-07-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-03-04*
+*written on 2021-03-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Empathetic BERT2BERT Conversational Model: Learning Arabic Language  Generation with Little Data](http://arxiv.org/abs/2103.04353v1) | Tarek Naous, Wissam Antoun, Reem A. Mahmoud, Hazem Hajj | cs.CL | 2021-03-07 |
 | [Towards Conversational Humor Analysis and Design](http://arxiv.org/abs/2103.00536v1) | Tanishq Chaudhary, Mayank Goel, Radhika Mamidi | cs.CL, cs.HC, cs.LG | 2021-02-28 |
 | [BOLD: Dataset and Metrics for Measuring Biases in Open-Ended Language  Generation](http://arxiv.org/abs/2101.11718v1) | Jwala Dhamala, Tony Sun, Varun Kumar, Satyapriya Krishna, Yada Pruksachatkun, Kai-Wei Chang, Rahul Gupta | cs.CL, cs.AI, cs.LG | 2021-01-27 |
 | [An Empirical Study of Cross-Lingual Transferability in Generative  Dialogue State Tracker](http://arxiv.org/abs/2101.11360v1) | Yen-Ting Lin, Yun-Nung Chen | cs.CL | 2021-01-27 |
