--- a/categories/image2text/_posts/2021-03-08-image2text.md
+++ b/categories/image2text/_posts/2021-03-08-image2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-02-25*
+*written on 2021-03-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Relationship-based Neural Baby Talk](http://arxiv.org/abs/2103.04846v1) | Fan Fu, Tingting Xie, Ioannis Patras, Sepehr Jalali | cs.CV, cs.AI | 2021-03-08 |
 | [Controllable and Diverse Text Generation in E-commerce](http://arxiv.org/abs/2102.11497v1) | Huajie Shao, Jun Wang, Haohong Lin, Xuezhou Zhang, Aston Zhang, Heng Ji, Tarek Abdelzaher | cs.LG | 2021-02-23 |
 | [Progressive Transformer-Based Generation of Radiology Reports](http://arxiv.org/abs/2102.09777v1) | Farhad Nooralahzadeh, Nicolas Perez Gonzalez, Thomas Frauenfelder, Koji Fujimoto, Michael Krauthammer | cs.CL | 2021-02-19 |
 | [Annotation Cleaning for the MSR-Video to Text Dataset](http://arxiv.org/abs/2102.06448v1) | Haoran Chen, Jianmin Li, Simone Frintrop, Xiaolin Hu | cs.CV, cs.LG, 68T45, 68T50, I.2.10; I.2.7 | 2021-02-12 |
