--- a/categories/table2text/_posts/2021-03-08-table2text.md
+++ b/categories/table2text/_posts/2021-03-08-table2text.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-02-25*
+*written on 2021-03-11*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Text Simplification by Tagging](http://arxiv.org/abs/2103.05070v1) | Kostiantyn Omelianchuk, Vipul Raheja, Oleksandr Skurzhanskyi | cs.CL | 2021-03-08 |
+| [InFillmore: Neural Frame Lexicalization for Narrative Text Infilling](http://arxiv.org/abs/2103.04941v1) | Jiefu Ou, Nathaniel Weir, Anton Belyy, Felix Yu, Benjamin Van Durme | cs.CL | 2021-03-08 |
 | [Towards Faithfulness in Open Domain Table-to-text Generation from an  Entity-centric View](http://arxiv.org/abs/2102.08585v1) | Tianyu Liu, Xin Zheng, Baobao Chang, Zhifang Sui | cs.CL, cs.AI | 2021-02-17 |
 | [Structural Information Preserving for Graph-to-Text Generation](http://arxiv.org/abs/2102.06749v1) | Linfeng Song, Ante Wang, Jinsong Su, Yue Zhang, Kun Xu, Yubin Ge, Dong Yu | cs.CL | 2021-02-12 |
 | [Generating Synthetic Text Data to Evaluate Causal Inference Methods](http://arxiv.org/abs/2102.05638v1) | Zach Wood-Doughty, Ilya Shpitser, Mark Dredze | cs.CL | 2021-02-10 |
