added code draft, updates to categs

--- a/categories/table2text/_posts/2021-03-11-table2text.md
+++ b/categories/table2text/_posts/2021-03-11-table2text.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-03-11*
+*written on 2021-03-13*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Topical Language Generation using Transformers](http://arxiv.org/abs/2103.06434v1) | Rohola Zandie, Mohammad H. Mahoor | cs.CL, cs.AI | 2021-03-11 |
+| [Causal-aware Safe Policy Improvement for Task-oriented dialogue](http://arxiv.org/abs/2103.06370v1) | Govardana Sachithanandam Ramachandran, Kazuma Hashimoto, Caiming Xiong | cs.CL, cs.AI, cs.LG | 2021-03-10 |
 | [Text Simplification by Tagging](http://arxiv.org/abs/2103.05070v1) | Kostiantyn Omelianchuk, Vipul Raheja, Oleksandr Skurzhanskyi | cs.CL | 2021-03-08 |
 | [InFillmore: Neural Frame Lexicalization for Narrative Text Infilling](http://arxiv.org/abs/2103.04941v1) | Jiefu Ou, Nathaniel Weir, Anton Belyy, Felix Yu, Benjamin Van Durme | cs.CL | 2021-03-08 |
 | [Towards Faithfulness in Open Domain Table-to-text Generation from an  Entity-centric View](http://arxiv.org/abs/2102.08585v1) | Tianyu Liu, Xin Zheng, Baobao Chang, Zhifang Sui | cs.CL, cs.AI | 2021-02-17 |
