--- a/categories/table2text/_posts/2021-03-16-table2text.md
+++ b/categories/table2text/_posts/2021-03-16-table2text.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-03-13*
+*written on 2021-03-18*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Structural Adapters in Pretrained Language Models for AMR-to-text  Generation](http://arxiv.org/abs/2103.09120v1) | Leonardo F. R. Ribeiro, Yue Zhang, Iryna Gurevych | cs.CL | 2021-03-16 |
+| [Get Your Vitamin C! Robust Fact Verification with Contrastive Evidence](http://arxiv.org/abs/2103.08541v1) | Tal Schuster, Adam Fisch, Regina Barzilay | cs.CL, cs.IR, cs.LG | 2021-03-15 |
 | [Topical Language Generation using Transformers](http://arxiv.org/abs/2103.06434v1) | Rohola Zandie, Mohammad H. Mahoor | cs.CL, cs.AI | 2021-03-11 |
 | [Causal-aware Safe Policy Improvement for Task-oriented dialogue](http://arxiv.org/abs/2103.06370v1) | Govardana Sachithanandam Ramachandran, Kazuma Hashimoto, Caiming Xiong | cs.CL, cs.AI, cs.LG | 2021-03-10 |
 | [Text Simplification by Tagging](http://arxiv.org/abs/2103.05070v1) | Kostiantyn Omelianchuk, Vipul Raheja, Oleksandr Skurzhanskyi | cs.CL | 2021-03-08 |
