--- a/categories/table2text/_posts/2021-03-20-table2text.md
+++ b/categories/table2text/_posts/2021-03-20-table2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-03-18*
+*written on 2021-03-25*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Attribute Alignment: Controlling Text Generation from Pre-trained  Language Models](http://arxiv.org/abs/2103.11070v1) | Dian Yu, Kenji Sagae, Zhou Yu | cs.CL | 2021-03-20 |
 | [Structural Adapters in Pretrained Language Models for AMR-to-text  Generation](http://arxiv.org/abs/2103.09120v1) | Leonardo F. R. Ribeiro, Yue Zhang, Iryna Gurevych | cs.CL | 2021-03-16 |
 | [Get Your Vitamin C! Robust Fact Verification with Contrastive Evidence](http://arxiv.org/abs/2103.08541v1) | Tal Schuster, Adam Fisch, Regina Barzilay | cs.CL, cs.IR, cs.LG | 2021-03-15 |
 | [Topical Language Generation using Transformers](http://arxiv.org/abs/2103.06434v1) | Rohola Zandie, Mohammad H. Mahoor | cs.CL, cs.AI | 2021-03-11 |
