--- a/categories/table2text/_posts/2021-03-28-table2text.md
+++ b/categories/table2text/_posts/2021-03-28-table2text.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-03-25*
+*written on 2021-04-01*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [On Hallucination and Predictive Uncertainty in Conditional Language  Generation](http://arxiv.org/abs/2103.15025v1) | Yijun Xiao, William Yang Wang | cs.CL | 2021-03-28 |
+| [Data Augmentation in Natural Language Processing: A Novel Text  Generation Approach for Long and Short Text Classifiers](http://arxiv.org/abs/2103.14453v1) | Markus Bayer, Marc-André Kaufhold, Björn Buchhold, Marcel Keller, Jörg Dallmeyer, Christian Reuter | cs.CL, cs.AI | 2021-03-26 |
 | [Attribute Alignment: Controlling Text Generation from Pre-trained  Language Models](http://arxiv.org/abs/2103.11070v1) | Dian Yu, Kenji Sagae, Zhou Yu | cs.CL | 2021-03-20 |
 | [Structural Adapters in Pretrained Language Models for AMR-to-text  Generation](http://arxiv.org/abs/2103.09120v1) | Leonardo F. R. Ribeiro, Yue Zhang, Iryna Gurevych | cs.CL | 2021-03-16 |
 | [Get Your Vitamin C! Robust Fact Verification with Contrastive Evidence](http://arxiv.org/abs/2103.08541v1) | Tal Schuster, Adam Fisch, Regina Barzilay | cs.CL, cs.IR, cs.LG | 2021-03-15 |
