--- a/categories/image2text/_posts/2021-03-28-image2text.md
+++ b/categories/image2text/_posts/2021-03-28-image2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-03-11*
+*written on 2021-04-01*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [On Hallucination and Predictive Uncertainty in Conditional Language  Generation](http://arxiv.org/abs/2103.15025v1) | Yijun Xiao, William Yang Wang | cs.CL | 2021-03-28 |
 | [Relationship-based Neural Baby Talk](http://arxiv.org/abs/2103.04846v1) | Fan Fu, Tingting Xie, Ioannis Patras, Sepehr Jalali | cs.CV, cs.AI | 2021-03-08 |
 | [Controllable and Diverse Text Generation in E-commerce](http://arxiv.org/abs/2102.11497v1) | Huajie Shao, Jun Wang, Haohong Lin, Xuezhou Zhang, Aston Zhang, Heng Ji, Tarek Abdelzaher | cs.LG | 2021-02-23 |
 | [Progressive Transformer-Based Generation of Radiology Reports](http://arxiv.org/abs/2102.09777v1) | Farhad Nooralahzadeh, Nicolas Perez Gonzalez, Thomas Frauenfelder, Koji Fujimoto, Michael Krauthammer | cs.CL | 2021-02-19 |
