--- a/categories/image2text/_posts/2021-04-14-image2text.md
+++ b/categories/image2text/_posts/2021-04-14-image2text.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-04-11*
+*written on 2021-04-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [IGA : An Intent-Guided Authoring Assistant](http://arxiv.org/abs/2104.07000v1) | Simeng Sun, Wenlong Zhao, Varun Manjunatha, Rajiv Jain, Vlad Morariu, Franck Dernoncourt, Balaji Vasan Srinivasan, Mohit Iyyer | cs.CL | 2021-04-14 |
 | [Automatic Generation of Descriptive Titles for Video Clips Using Deep  Learning](http://arxiv.org/abs/2104.03337v1) | Soheyla Amirian, Khaled Rasheed, Thiab R. Taha, Hamid R. Arabnia | cs.CV, cs.AI, cs.LG | 2021-04-07 |
 | [On Hallucination and Predictive Uncertainty in Conditional Language  Generation](http://arxiv.org/abs/2103.15025v1) | Yijun Xiao, William Yang Wang | cs.CL | 2021-03-28 |
 | [Relationship-based Neural Baby Talk](http://arxiv.org/abs/2103.04846v1) | Fan Fu, Tingting Xie, Ioannis Patras, Sepehr Jalali | cs.CV, cs.AI | 2021-03-08 |
