--- a/categories/story/_posts/2021-04-12-story.md
+++ b/categories/story/_posts/2021-04-12-story.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-04-11*
+*written on 2021-04-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Plot-guided Adversarial Example Construction for Evaluating Open-domain  Story Generation](http://arxiv.org/abs/2104.05801v1) | Sarik Ghazarian, Zixi Liu, Akash SM, Ralph Weischedel, Aram Galstyan, Nanyun Peng | cs.CL, cs.LG | 2021-04-12 |
+| [Semantic Frame Forecast](http://arxiv.org/abs/2104.05604v1) | Chieh-Yang Huang, Ting-Hao 'Kenneth' Huang | cs.CL | 2021-04-12 |
 | [Sketch and Customize: A Counterfactual Story Generator](http://arxiv.org/abs/2104.00929v1) | Changying Hao, Liang Pang, Yanyan Lan, Yan Wang, Jiafeng Guo, Xueqi Cheng | cs.CL, cs.AI | 2021-04-02 |
 | [AfriKI: Machine-in-the-Loop Afrikaans Poetry Generation](http://arxiv.org/abs/2103.16190v1) | Imke van Heerden, Anil Bas | cs.CL, cs.LG | 2021-03-30 |
 | [Automatic Story Generation: Challenges and Attempts](http://arxiv.org/abs/2102.12634v1) | Amal Alabdulkarim, Siyan Li, Xiangyu Peng | cs.CL | 2021-02-25 |
