--- a/categories/table2text/_posts/2021-04-15-table2text.md
+++ b/categories/table2text/_posts/2021-04-15-table2text.md
@@ -6,10 +6,14 @@ sidebar:
 ---
 
 
-*written on 2021-04-11*
+*written on 2021-04-16*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [ExplaGraphs: An Explanation Graph Generation Task for Structured  Commonsense Reasoning](http://arxiv.org/abs/2104.07644v1) | Swarnadeep Saha, Prateek Yadav, Lisa Bauer, Mohit Bansal | cs.CL, cs.AI | 2021-04-15 |
+| [Data-QuestEval: A Referenceless Metric for Data to Text Semantic  Evaluation](http://arxiv.org/abs/2104.07555v1) | Clément Rebuffel, Thomas Scialom, Laure Soulier, Benjamin Piwowarski, Sylvain Lamprier, Jacopo Staiano, Geoffrey Scoutheeten, Patrick Gallinari | cs.CL | 2021-04-15 |
+| [Plot-guided Adversarial Example Construction for Evaluating Open-domain  Story Generation](http://arxiv.org/abs/2104.05801v1) | Sarik Ghazarian, Zixi Liu, Akash SM, Ralph Weischedel, Aram Galstyan, Nanyun Peng | cs.CL, cs.LG | 2021-04-12 |
+| [StylePTB: A Compositional Benchmark for Fine-grained Controllable Text  Style Transfer](http://arxiv.org/abs/2104.05196v1) | Yiwei Lyu, Paul Pu Liang, Hai Pham, Eduard Hovy, Barnabás Póczos, Ruslan Salakhutdinov, Louis-Philippe Morency | cs.CL, cs.AI, cs.LG | 2021-04-12 |
 | [WakaVT: A Sequential Variational Transformer for Waka Generation](http://arxiv.org/abs/2104.00426v1) | Yuka Takeishi, Mingxuan Niu, Jing Luo, Zhong Jin, Xinyu Yang | cs.CL, cs.AI | 2021-04-01 |
 | [FeTaQA: Free-form Table Question Answering](http://arxiv.org/abs/2104.00369v1) | Linyong Nan, Chiachun Hsieh, Ziming Mao, Xi Victoria Lin, Neha Verma, Rui Zhang, Wojciech Kryściński, Nick Schoelkopf, Riley Kong, Xiangru Tang, Murori Mutuma, Ben Rosand, Isabel Trindade, Renusree Bandaru, Jacob Cunningham, Caiming Xiong, Dragomir Radev | cs.CL | 2021-04-01 |
 | [On Hallucination and Predictive Uncertainty in Conditional Language  Generation](http://arxiv.org/abs/2103.15025v1) | Yijun Xiao, William Yang Wang | cs.CL | 2021-03-28 |
