--- a/categories/dialogue/_posts/2021-04-26-dialogue.md
+++ b/categories/dialogue/_posts/2021-04-26-dialogue.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-04-16*
+*written on 2021-05-01*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Focused Attention Improves Document-Grounded Generation](http://arxiv.org/abs/2104.12714v1) | Shrimai Prabhumoye, Kazuma Hashimoto, Yingbo Zhou, Alan W Black, Ruslan Salakhutdinov | cs.CL | 2021-04-26 |
 | [Estimating Subjective Crowd-Evaluations as an Additional Objective to  Improve Natural Language Generation](http://arxiv.org/abs/2104.05224v1) | Jakob Nyberg, Ramesh Manuvinakurike, Maike Paetzel-Prüsmann | cs.CL | 2021-04-12 |
 | [Overprotective Training Environments Fall Short at Testing Time: Let  Models Contribute to Their Own Training](http://arxiv.org/abs/2103.11145v1) | Alberto Testoni, Raffaella Bernardi | cs.CL | 2021-03-20 |
 | [Causal-aware Safe Policy Improvement for Task-oriented dialogue](http://arxiv.org/abs/2103.06370v1) | Govardana Sachithanandam Ramachandran, Kazuma Hashimoto, Caiming Xiong | cs.CL, cs.AI, cs.LG | 2021-03-10 |
