--- a/categories/story/_posts/2021-05-04-story.md
+++ b/categories/story/_posts/2021-05-04-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2021-04-16*
+*written on 2021-05-07*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Inferring the Reader: Guiding Automated Story Generation with  Commonsense Reasoning](http://arxiv.org/abs/2105.01311v1) | Xiangyu Peng, Siyan Li, Sarah Wiegreffe, Mark Riedl | cs.CL | 2021-05-04 |
 | [Plot-guided Adversarial Example Construction for Evaluating Open-domain  Story Generation](http://arxiv.org/abs/2104.05801v1) | Sarik Ghazarian, Zixi Liu, Akash SM, Ralph Weischedel, Aram Galstyan, Nanyun Peng | cs.CL, cs.LG | 2021-04-12 |
 | [Semantic Frame Forecast](http://arxiv.org/abs/2104.05604v1) | Chieh-Yang Huang, Ting-Hao 'Kenneth' Huang | cs.CL | 2021-04-12 |
 | [Sketch and Customize: A Counterfactual Story Generator](http://arxiv.org/abs/2104.00929v1) | Changying Hao, Liang Pang, Yanyan Lan, Yan Wang, Jiafeng Guo, Xueqi Cheng | cs.CL, cs.AI | 2021-04-02 |
