--- a/categories/table2text/_posts/2021-05-01-table2text.md
+++ b/categories/table2text/_posts/2021-05-01-table2text.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-05-01*
+*written on 2021-05-07*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Hidden Backdoors in Human-Centric Language Models](http://arxiv.org/abs/2105.00164v1) | Shaofeng Li, Hui Liu, Tian Dong, Benjamin Zi Hao Zhao, Minhui Xue, Haojin Zhu, Jialiang Lu | cs.CL, cs.CR | 2021-05-01 |
+| [Mitigating Political Bias in Language Models Through Reinforced  Calibration](http://arxiv.org/abs/2104.14795v1) | Ruibo Liu, Chenyan Jia, Jason Wei, Guangxuan Xu, Lili Wang, Soroush Vosoughi | cs.CL, cs.AI | 2021-04-30 |
 | [Text Generation with Deep Variational GAN](http://arxiv.org/abs/2104.13488v1) | Mahmoud Hossam, Trung Le, Michael Papasimeon, Viet Huynh, Dinh Phung | cs.LG, cs.AI, cs.CL, I.2.0; I.2.7; I.5.0 | 2021-04-27 |
 | [A Token-level Reference-free Hallucination Detection Benchmark for  Free-form Text Generation](http://arxiv.org/abs/2104.08704v1) | Tianyu Liu, Yizhe Zhang, Chris Brockett, Yi Mao, Zhifang Sui, Weizhu Chen, Bill Dolan | cs.CL, cs.AI | 2021-04-18 |
 | [Learning to Reason for Text Generation from Scientific Tables](http://arxiv.org/abs/2104.08296v1) | Nafise Sadat Moosavi, Andreas Rücklé, Dan Roth, Iryna Gurevych | cs.CL | 2021-04-16 |
