update on 25 may

--- a/categories/dialogue/_posts/2021-05-25-dialogue.md
+++ b/categories/dialogue/_posts/2021-05-25-dialogue.md
@@ -6,10 +6,13 @@ sidebar:
 ---
 
 
-*written on 2021-05-17*
+*written on 2021-06-02*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Empirical Error Modeling Improves Robustness of Noisy Neural Sequence  Labeling](http://arxiv.org/abs/2105.11872v1) | Marcin Namysl, Sven Behnke, Joachim Köhler | cs.CL | 2021-05-25 |
+| [Towards a Universal NLG for Dialogue Systems and Simulators with Future  Bridging](http://arxiv.org/abs/2105.10267v2) | Philipp Ennen, Yen-Ting Lin, Ali Girayhan Ozbay, Ferdinando Insalata, Maolin Li, Ye Tian, Sepehr Jalali, Da-shan Shiu | cs.CL, cs.AI, cs.LG | 2021-05-21 |
+| [Retrieval-Augmented Transformer-XL for Close-Domain Dialog Generation](http://arxiv.org/abs/2105.09235v1) | Giovanni Bonetta, Rossella Cancelliere, Ding Liu, Paul Vozila | cs.CL, cs.AI | 2021-05-19 |
 | [Retrieval-Free Knowledge-Grounded Dialogue Response Generation with  Adapters](http://arxiv.org/abs/2105.06232v1) | Yan Xu, Etsuko Ishii, Zihan Liu, Genta Indra Winata, Dan Su, Andrea Madotto, Pascale Fung | cs.CL, cs.AI | 2021-05-13 |
 | [Focused Attention Improves Document-Grounded Generation](http://arxiv.org/abs/2104.12714v1) | Shrimai Prabhumoye, Kazuma Hashimoto, Yingbo Zhou, Alan W Black, Ruslan Salakhutdinov | cs.CL | 2021-04-26 |
 | [Estimating Subjective Crowd-Evaluations as an Additional Objective to  Improve Natural Language Generation](http://arxiv.org/abs/2104.05224v1) | Jakob Nyberg, Ramesh Manuvinakurike, Maike Paetzel-Prüsmann | cs.CL | 2021-04-12 |
