--- a/categories/dialogue/_posts/2021-06-03-dialogue.md
+++ b/categories/dialogue/_posts/2021-06-03-dialogue.md
@@ -6,10 +6,16 @@ sidebar:
 ---
 
 
-*written on 2021-06-02*
+*written on 2021-06-04*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Defending against Backdoor Attacks in Natural Language Generation](http://arxiv.org/abs/2106.01810v1) | Chun Fan, Xiaoya Li, Yuxian Meng, Xiaofei Sun, Xiang Ao, Fei Wu, Jiwei Li, Tianwei Zhang | cs.CL | 2021-06-03 |
+| [Generate, Prune, Select: A Pipeline for Counterspeech Generation against  Online Hate Speech](http://arxiv.org/abs/2106.01625v1) | Wanzheng Zhu, Suma Bhat | cs.CL | 2021-06-03 |
+| [Detecting Bot-Generated Text by Characterizing Linguistic Accommodation  in Human-Bot Interactions](http://arxiv.org/abs/2106.01170v1) | Paras Bhatt, Anthony Rios | cs.CL | 2021-06-02 |
+| [NeuralWOZ: Learning to Collect Task-Oriented Dialogue via Model-Based  Simulation](http://arxiv.org/abs/2105.14454v1) | Sungdong Kim, Minsuk Chang, Sang-Woo Lee | cs.CL | 2021-05-30 |
+| [OTTers: One-turn Topic Transitions for Open-Domain Dialogue](http://arxiv.org/abs/2105.13710v1) | Karin Sevegnani, David M. Howcroft, Ioannis Konstas, Verena Rieser | cs.CL | 2021-05-28 |
+| [Generative Adversarial Imitation Learning for Empathy-based AI](http://arxiv.org/abs/2105.13328v1) | Pratyush Muthukumar, Karishma Muthukumar, Deepan Muthirayan, Pramod Khargonekar | cs.CL | 2021-05-27 |
 | [Empirical Error Modeling Improves Robustness of Noisy Neural Sequence  Labeling](http://arxiv.org/abs/2105.11872v1) | Marcin Namysl, Sven Behnke, Joachim Köhler | cs.CL | 2021-05-25 |
 | [Towards a Universal NLG for Dialogue Systems and Simulators with Future  Bridging](http://arxiv.org/abs/2105.10267v2) | Philipp Ennen, Yen-Ting Lin, Ali Girayhan Ozbay, Ferdinando Insalata, Maolin Li, Ye Tian, Sepehr Jalali, Da-shan Shiu | cs.CL, cs.AI, cs.LG | 2021-05-21 |
 | [Retrieval-Augmented Transformer-XL for Close-Domain Dialog Generation](http://arxiv.org/abs/2105.09235v1) | Giovanni Bonetta, Rossella Cancelliere, Ding Liu, Paul Vozila | cs.CL, cs.AI | 2021-05-19 |
