--- a/categories/table2text/_posts/2021-06-10-table2text.md
+++ b/categories/table2text/_posts/2021-06-10-table2text.md
@@ -6,10 +6,14 @@ sidebar:
 ---
 
 
-*written on 2021-06-04*
+*written on 2021-06-14*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [AUGNLG: Few-shot Natural Language Generation using Self-trained Data  Augmentation](http://arxiv.org/abs/2106.05589v1) | Xinnuo Xu, Guoyin Wang, Young-Bum Kim, Sungjin Lee | cs.CL | 2021-06-10 |
+| [AGGGEN: Ordering and Aggregating while Generating](http://arxiv.org/abs/2106.05580v1) | Xinnuo Xu, Ondřej Dušek, Verena Rieser, Ioannis Konstas | cs.CL | 2021-06-10 |
+| [Turing: an Accurate and Interpretable Multi-Hypothesis Cross-Domain  Natural Language Database Interface](http://arxiv.org/abs/2106.04559v1) | Peng Xu, Wenjie Zi, Hamidreza Shahidi, Ákos Kádár, Keyi Tang, Wei Yang, Jawad Ateeq, Harsh Barot, Meidan Alon, Yanshuai Cao | cs.CL | 2021-06-08 |
+| [Neural semi-Markov CRF for Monolingual Word Alignment](http://arxiv.org/abs/2106.02569v1) | Wuwei Lan, Chao Jiang, Wei Xu | cs.CL | 2021-06-04 |
 | [Defending against Backdoor Attacks in Natural Language Generation](http://arxiv.org/abs/2106.01810v1) | Chun Fan, Xiaoya Li, Yuxian Meng, Xiaofei Sun, Xiang Ao, Fei Wu, Jiwei Li, Tianwei Zhang | cs.CL | 2021-06-03 |
 | [ZmBART: An Unsupervised Cross-lingual Transfer Framework for Language  Generation](http://arxiv.org/abs/2106.01597v1) | Kaushal Kumar Maurya, Maunendra Sankar Desarkar, Yoshinobu Kano, Kumari Deepshikha | cs.CL, cs.AI, cs.LG | 2021-06-03 |
 | [Sketch and Refine: Towards Faithful and Informative Table-to-Text  Generation](http://arxiv.org/abs/2105.14778v1) | Peng Wang, Junyang Lin, An Yang, Chang Zhou, Yichang Zhang, Jingren Zhou, Hongxia Yang | cs.CL | 2021-05-31 |
