--- a/categories/dialogue/_posts/2021-06-20-dialogue.md
+++ b/categories/dialogue/_posts/2021-06-20-dialogue.md
@@ -6,10 +6,12 @@ sidebar:
 ---
 
 
-*written on 2021-06-14*
+*written on 2021-07-02*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Do Encoder Representations of Generative Dialogue Models Encode  Sufficient Information about the Task ?](http://arxiv.org/abs/2106.10622v1) | Prasanna Parthasarathi, Joelle Pineau, Sarath Chandar | cs.CL | 2021-06-20 |
+| [Local Explanation of Dialogue Response Generation](http://arxiv.org/abs/2106.06528v1) | Yi-Lin Tuan, Connor Pryor, Wenhu Chen, Lise Getoor, William Yang Wang | cs.CL, stat.ML | 2021-06-11 |
 | [AUGNLG: Few-shot Natural Language Generation using Self-trained Data  Augmentation](http://arxiv.org/abs/2106.05589v1) | Xinnuo Xu, Guoyin Wang, Young-Bum Kim, Sungjin Lee | cs.CL | 2021-06-10 |
 | [Defending against Backdoor Attacks in Natural Language Generation](http://arxiv.org/abs/2106.01810v1) | Chun Fan, Xiaoya Li, Yuxian Meng, Xiaofei Sun, Xiang Ao, Fei Wu, Jiwei Li, Tianwei Zhang | cs.CL | 2021-06-03 |
 | [Generate, Prune, Select: A Pipeline for Counterspeech Generation against  Online Hate Speech](http://arxiv.org/abs/2106.01625v1) | Wanzheng Zhu, Suma Bhat | cs.CL | 2021-06-03 |
